--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
 		<p class="oi3">Álbum</p>
 		<p class="oi4">Tempo</p>
 		<hr/>
-		<li><a href="musicas/more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
+		<li><a href="more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
 		<hr/>
-		<li><a href="musicas/killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
+		<li><a href="killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
 		<hr/>
-		<li><a href="musicas/more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
+		<li><a href="more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
 		<hr/>
-		<li><a href="musicas/killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
+		<li><a href="killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
 		<hr/>
-		<li><a href="musicas/more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
+		<li><a href="more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
 		<hr/>
-		<li><a href="musicas/killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
+		<li><a href="killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
 		<hr/>
-		<li><a href="musicas/more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
+		<li><a href="more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
 		<hr/>
-		<li><a href="musicas/killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
+		<li><a href="killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
 		<hr/>
-		<li><a href="musicas/more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
+		<li><a href="more&more.mp3">➜ More & More<p class="kk">Twice</p><p class="kkk">More & More</p><p class="kkkk">4:00</p></a></li>
 		<hr/>
-		<li><a href="musicas/killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
+		<li><a href="killthislove.mp3">➜ Kill This Love<p class="kk">Blackpink</p><p class="kkk">Kill This Love</p><p class="kkkk">3:13</p></a></li>
 		<hr/>
 
 		
